welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	var c:Color=Color.yellow
	faireV(c:Color) {
		avance();
		baisseBrosse()
		leveBrosse();
		avance();
		
	}
}

